# franka_wrist_camera_isaaclab

./: .gitignore  AGENTS.md  README.md  guidelines.md  pyproject.toml  run_collect.sh  run_sim.sh
configs/: collection.yaml  collection_clutter_watch.yaml  collection_reaching.yaml  collection_reaching_smoke.yaml  export.yaml  object_catalog.generated.yaml  object_catalog.yaml  object_geometry.generated.yaml  objects.yaml  scene.yaml  tasks.yaml
objects/: citation.tex  metadata.json  tree.md
objects/apple/: apple00.usd  apple01.usd  apple02.usd  apple03.usd  apple04.usd  apple05.usd  apple06.usd  apple07.usd  apple08.usd  apple09.usd  apple10.usd  apple11.usd  apple12.usd  apple13.usd  apple14.usd  apple15.usd  apple18.usd  apple19.usd  apple20.usd  apple22.usd
objects/avocado/: avocado01.usd  avocado02.usd  avocado04.usd  avocado06.usd  avocado08.usd
objects/beer/: beer00.usd  beer01.usd  beer03.usd  beer05.usd  beer07.usd  beer09.usd  beer13.usd  beer19.usd
objects/bottle/: dbottle02.usd  wbottle01.usd  wbottle07.usd  wbottle08.usd  (+3 more)
scripts/: collect.py  debug_scene.py  evaluate.py  export_ila.py  generate_object_catalog.py  generate_object_geometry.py  inspect_collection.py  inspect_episode.py  inspect_ila_dataset.py  inspect_object_catalog.py  inspect_object_geometry.py  inspect_objects.py  inspect_target_sampling.py  run.sh  run_scene.py  visualize_ila_episode.py  write_ila_splits.py  write_ila_stats.py
tests/: test_clutter_sampling.py  test_motion_primitives.py  test_pick_place_task.py  test_placement_geometry.py  test_reaching.py  test_success.py
(+226 files in other folders)
